FIX aes label is mapped but not used by any geoms
I don't think you need to map `label` unless you add to your example for instance `geom_text(stat ='stratum')`

--- a/vignettes/ggalluvial.rmd
+++ b/vignettes/ggalluvial.rmd
@@ -165,7 +165,7 @@ data(majors)
 majors$curriculum <- as.factor(majors$curriculum)
 ggplot(majors,
        aes(x = semester, stratum = curriculum, alluvium = student,
-           fill = curriculum, label = curriculum)) +
+           fill = curriculum)) +
   geom_flow(stat = "alluvium", lode.guidance = "rightleft",
             color = "darkgray") +
   geom_stratum() +
